force-app/main/default/objects/RC_student_event_junction__c/RC_student_event_junction__c.object-meta.xml
<CustomObject>
    <label>RC_student_event_junction</label>
    <nameField>
        <label>RC_student_envent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RC_student_event_junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>