force-app/main/default/objects/RC_student_event_junction__c/fields/question_result__c.field-meta.xml
<CustomField>
    <fullName>question_result__c</fullName>
    <label>question_result</label>
    <length>50</length>
    <type>Text</type>
</CustomField>