force-app/main/default/objects/RC_student_event_junction__c/fields/question_student_answer__c.field-meta.xml
<CustomField>
    <fullName>question_student_answer__c</fullName>
    <label>question_student_answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>