force-app/main/default/objects/RC_student_event_junction__c/fields/RC_event__c.field-meta.xml
<CustomField>
    <fullName>RC_event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RC_event</label>
    <referenceTo>RC_event__c</referenceTo>
    <relationshipLabel>RC_student_event_junctions</relationshipLabel>
    <relationshipName>RC_student_event_junctions</relationshipName>
    <type>Lookup</type>
</CustomField>