force-app/main/default/objects/RC_student_event_junction__c/fields/RC_student__c.field-meta.xml
<CustomField>
    <fullName>RC_student__c</fullName>
    <label>RC_student</label>
    <referenceTo>RC_student__c</referenceTo>
    <relationshipLabel>RC_student_event_junctions</relationshipLabel>
    <relationshipName>RC_student_event_junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>